fix: store routes
