# controllers/stroreController.go
@@ -5,7 +5,6 @@ import (
 	"hewantani/models"
 	"hewantani/services"
 	"net/http"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -17,11 +16,12 @@ type StoreInput struct {
 	Name        string `json:"name" binding:"required"`
 	Description string `json:"description" binding:"required"`
 	Address     string `json:"address" binding:"required"`
+	ImageUrl    string `json:"image_url" binding:"required,url"`
 }
 
 // CreateStore godoc
 // @Summary      Create Store, user role must be MERCHANT
-// @Description  registering a user from public access.
+// @Description  Create Store
 // @Tags         Store
 // @Param        Body  body  StoreInput  true  "the body to create a Store"
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
@@ -42,7 +42,7 @@ func (h StoreController) CreateStore(c *gin.Context) {
 	s.Description = input.Description
 	s.Address = input.Address
 	s.UserId = c.MustGet("user_id").(uint)
-
+	s.ImageUrl = input.ImageUrl
 	savedStore, err := services.All.StoreService.Save(&s)
 	if err != nil {
 		c.Error(err)
@@ -61,11 +61,11 @@ func (h StoreController) CreateStore(c *gin.Context) {
 
 // GetStores godoc
 // @Summary      get stores, anyone can use this
-// @Description  registering a user from public access.
+// @Description  get stores
 // @Tags         Store
 // @Produce      json
 // @Success      200  {object}  map[string]interface{}
-// @Router       /Stores [get]
+// @Router       /stores [get]
 func (h StoreController) GetStores(c *gin.Context) {
 	data, err := services.All.StoreService.FindAll()
 	if err != nil {
@@ -77,15 +77,16 @@ func (h StoreController) GetStores(c *gin.Context) {
 }
 
 // UpdateStore godoc
-// @Summary      Update Store, user role must be MERCHANT
-// @Description  registering a user from public access.
+// @Summary      Update Store, user role must be MERCHANT and must own the store
+// @Description  update store
 // @Tags         Store
+// @Param id path string true "store id"
 // @Param        Body  body  StoreInput  true  "the body to update a Store"
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
 // @Security BearerToken
 // @Produce      json
 // @Success      200  {object}  map[string]interface{}
-// @Router       /stores [put]
+// @Router       /stores/{id} [put]
 func (h StoreController) UpdateStore(c *gin.Context) {
 	var input StoreInput
 
@@ -94,20 +95,16 @@ func (h StoreController) UpdateStore(c *gin.Context) {
 		return
 	}
 
-	idString := c.Param("id")
-	id, err := strconv.ParseUint(idString, 10, 32)
-	if err != nil {
-		c.Error(err).SetMeta(httperror.NewMeta(http.StatusBadRequest))
-		return
-	}
+	storeId := c.MustGet("store_id").(uint)
+	found := c.MustGet("found").(*models.Store)
 
-	m := models.Store{}
-	m.Name = input.Name
-	m.Description = input.Description
-	m.Address = input.Address
-	m.UserId = c.MustGet("user_id").(uint)
+	found.Name = input.Name
+	found.Description = input.Description
+	found.Address = input.Address
+	found.UserId = c.MustGet("user_id").(uint)
+	found.ImageUrl = input.ImageUrl
 
-	savedStore, err := services.All.StoreService.Update(uint(id), &m)
+	savedStore, err := services.All.StoreService.Update(uint(storeId), found)
 	if err != nil {
 		c.Error(err)
 		return
@@ -117,28 +114,23 @@ func (h StoreController) UpdateStore(c *gin.Context) {
 }
 
 // DeleteStore godoc
-// @Summary      delete Store, user role must be MERCHANT
-// @Description  registering a user from public access.
+// @Summary      delete Store, user role must be MERCHANT and must own the store
+// @Description  delete store
 // @Tags         Store
-// @Param        Body  body  StoreInput  true  "the body to delete a Store"
+// @Param id path string true "store id"
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
 // @Security BearerToken
 // @Produce      json
 // @Success      200  {object}  map[string]interface{}
-// @Router       /stores [delete]
+// @Router       /stores/{id} [delete]
 func (h StoreController) DeleteStore(c *gin.Context) {
-	idString := c.Param("id")
-	id, err := strconv.ParseUint(idString, 10, 32)
-	if err != nil {
-		c.Error(err).SetMeta(httperror.NewMeta(http.StatusBadRequest))
-		return
-	}
+	storeId := c.MustGet("store_id").(uint)
 
-	savedStore, err := services.All.StoreService.Delete(uint(id))
+	err := services.All.StoreService.Delete(uint(storeId))
 	if err != nil {
 		c.Error(err)
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "success", "data": savedStore})
+	c.JSON(http.StatusOK, gin.H{"message": "success deleted store"})
 }
