# models/store.go
@@ -1,13 +1,12 @@
 package models
 
-import "gorm.io/gorm"
-
 type Store struct {
-	gorm.Model
+	BaseModel
 
-	Name        string `json:"name" gorm:"not null;unique"`
+	Name        string `json:"name" gorm:"not null;unique;check:name <> ''"`
 	Description string `json:"description"`
 	Address     string `json:"address"`
+	ImageUrl    string `json:"image_url"`
 
 	UserId uint `json:"user_id"`
 	User   User `json:"-" gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
